--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8"/>
     <title>Motor Rivals - All Cars</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Raleway:400i"
+    rel="stylesheet"/>
   </head>
   <body>
+    <header>
+      <h1>Motor Rivals</h1>
+    </header>
 
   </body>
 </html>
