Added header with font style/colors. #1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <h1>Motor Rivals</h1>
+      <h2>Where luxury sport meets its match.</h2>
     </header>
 
   </body>
