--- a/index.html
+++ b/index.html
@@ -3,15 +3,37 @@
   <head>
     <meta charset="utf-8"/>
     <title>Motor Rivals - All Cars</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="styles.css"/>
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Raleway:400i"
     rel="stylesheet"/>
   </head>
   <body>
-    <header>
-      <h1>Motor Rivals</h1>
-      <h2>Where luxury sport meets its match.</h2>
-    </header>
-
+    <div class="container">
+      <div class="row">
+      <div class="col m1">1</div>
+      <div class="col m1">2</div>
+      <div class="col m1">3</div>
+      <div class="col m1">4</div>
+      <div class="col m1">5</div>
+      <div class="col m1">6</div>
+      <div class="col m1">7</div>
+      <div class="col m1">8</div>
+      <div class="col m1">9</div>
+      <div class="col m1">10</div>
+      <div class="col m1">11</div>
+      <div class="col m1">12</div>
+    </div>
+      <div class="row">
+        <div class="col s6"><h1>Motor Rivals</h1></div>
+      </div>
+      <div class="row">
+        <div class="col s6"><h2>Where luxury sport meets its match.</h2></div>
+      </div>
+      <div class="row">
+        <div class="col s12"><h3>All Cars</h3></div>
+      </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   </body>
 </html>
