--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Motor Rivals - All Cars</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"/>
     <link rel="stylesheet" href="styles.css"/>
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Raleway:400i"
     rel="stylesheet"/>
@@ -11,29 +11,45 @@
   <body>
     <div class="container">
       <div class="row">
-      <div class="col m1">1</div>
-      <div class="col m1">2</div>
-      <div class="col m1">3</div>
-      <div class="col m1">4</div>
-      <div class="col m1">5</div>
-      <div class="col m1">6</div>
-      <div class="col m1">7</div>
-      <div class="col m1">8</div>
-      <div class="col m1">9</div>
-      <div class="col m1">10</div>
-      <div class="col m1">11</div>
-      <div class="col m1">12</div>
+      <div class="col m1 col-m1">1</div>
+      <div class="col m1 col-m1">2</div>
+      <div class="col m1 col-m1">3</div>
+      <div class="col m1 col-m1">4</div>
+      <div class="col m1 col-m1">5</div>
+      <div class="col m1 col-m1">6</div>
+      <div class="col m1 col-m1">7</div>
+      <div class="col m1 col-m1">8</div>
+      <div class="col m1 col-m1">9</div>
+      <div class="col m1 col-m1">10</div>
+      <div class="col m1 col-m1">11</div>
+      <div class="col m1 col-m1">12</div>
     </div>
       <div class="row">
-        <div class="col s6"><h1>Motor Rivals</h1></div>
+        <div class="col s5"><h1>Motor Rivals</h1></div>
       </div>
       <div class="row">
-        <div class="col s6"><h2>Where luxury sport meets its match.</h2></div>
+        <div class="col s5"><h2>Where luxury sport meets its match.</h2></div>
       </div>
       <div class="row">
-        <div class="col s12"><h3>All Cars</h3></div>
+        <div class="col s3 push-s5"><h3>All Cars</h3></div>
+      </div>
+      <div class="row">
+        <div class="col s3 push-s1"><a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+        </div>
+        <div class="col s3 push-s3"><a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+        </div>
+        <div class="col s3 push-s5"><a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s3"><img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
+        </div>
+        <div class="col s3 push-s2"><img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
+        </div>
+        <div class="col s3 push-s4"><img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
+        </div>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
