--- a/index.html
+++ b/index.html
@@ -34,19 +34,29 @@
         <div class="col s3 push-s5"><h3>All Cars</h3></div>
       </div>
       <div class="row">
-        <div class="col s3 push-s1"><a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+        <div class="col s3">
+          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
         </div>
-        <div class="col s3 push-s3"><a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+        <div class="col s3">
+          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
         </div>
-        <div class="col s3 push-s5"><a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+        <div class="col s3">
+          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
         </div>
-      </div>
-      <div class="row">
-        <div class="col s3"><img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
+        <div class="col s3">
+          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
         </div>
-        <div class="col s3 push-s2"><img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
+        <div class="col s3">
+          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
         </div>
-        <div class="col s3 push-s4"><img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
+        <div class="col s3">
+          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
+          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
         </div>
       </div>
     </div>
