Iterate through the data model list of cars and render and append it to the DOM.#1

--- a/index.html
+++ b/index.html
@@ -11,53 +11,15 @@
   <body>
     <div class="container">
       <div class="row">
-      <div class="col m1 col-m1">1</div>
-      <div class="col m1 col-m1">2</div>
-      <div class="col m1 col-m1">3</div>
-      <div class="col m1 col-m1">4</div>
-      <div class="col m1 col-m1">5</div>
-      <div class="col m1 col-m1">6</div>
-      <div class="col m1 col-m1">7</div>
-      <div class="col m1 col-m1">8</div>
-      <div class="col m1 col-m1">9</div>
-      <div class="col m1 col-m1">10</div>
-      <div class="col m1 col-m1">11</div>
-      <div class="col m1 col-m1">12</div>
-    </div>
-      <div class="row">
-        <div class="col s5"><h1>Motor Rivals</h1></div>
+        <div class="col s6"><h1>Motor Rivals</h1></div>
       </div>
       <div class="row">
-        <div class="col s5"><h2>Where luxury sport meets its match.</h2></div>
+        <div class="col s6"><h2>Where luxury sport meets its match.</h2></div>
       </div>
       <div class="row">
-        <div class="col s3 push-s5"><h3>All Cars</h3></div>
+        <div class="col s12 h3"><h3>All Cars</h3></div>
       </div>
-      <div class="row">
-        <div class="col s3">
-          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
-          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
-        </div>
-        <div class="col s3">
-          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
-          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
-        </div>
-        <div class="col s3">
-          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
-          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
-        </div>
-        <div class="col s3">
-          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
-          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
-        </div>
-        <div class="col s3">
-          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
-          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
-        </div>
-        <div class="col s3">
-          <a class="icon-title" href="2018 Audi A5">2018 Audi A5</a>
-          <img class="car-icon" src="images/audi-a5-2018.jpg" alt="2018 Audi A5"/>
-        </div>
+      <div class="row car-list">
       </div>
     </div>
     <script src="main.js"></script>
