Edited car title font. #1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Motor Rivals - All Cars</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"/>
     <link rel="stylesheet" href="styles.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Raleway:400i"
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Raleway"
     rel="stylesheet"/>
   </head>
   <body>
