--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col s6 pull-s2"><h1>Motor Rivals</h1></div>
+        <div class="col s6"><h1>Motor Rivals</h1></div>
       </div>
       <div class="row">
-        <div class="col s6 pull-s2"><h2>Where luxury sport meets its match.</h2></div>
+        <div class="col s6"><h2>Where luxury sport meets its match.</h2></div>
       </div>
       <div class="row">
         <div class="col s12 h3"><h3>All Cars</h3></div>
