Added Return All Cars button that works as intended. Added the Add to Comparison Button w/ no function. #3

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
       <div class="row car-list">
         <div class="col s12 h3"><h3>All Cars</h3></div>
       </div>
-      <div class="row car-specs-list">
+      <div class="row car-specs-list"></div>
+      <script src="main.js"></script>
     </div>
-    <script src="main.js"></script>
-  </div>
   </body>
 </html>
