Created Event Listner function where clicking on comparison button hides car chosen. A message now pops up mentioning choosing one more car for comparison. User can add a car to comparison. #3

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="row"></div>
       <div class="col s12 h3"><h3>All Cars</h3></div>
       <div class="row car-list"></div>
-      <div class="row car-specs-list"></div>
-      <div class="row car-compare-list"></div>
+      <div class="row car-specs-list hidden"></div>
+      <div class="row car-compare-list hidden"></div>
       <script src="main.js"></script>
     </div>
   </body>
