Added comparison table for user to compare specs. #4

--- a/index.html
+++ b/index.html
@@ -20,7 +20,66 @@
       <div class="col s12 h3"><h3>All Cars</h3></div>
       <div class="row car-list"></div>
       <div class="row car-specs-list hidden"></div>
-      <div class="row car-compare-list hidden"></div>
+      <div class="row car-compare-list hidden">
+        <div class="col s12 push img-compare-container">
+          <div class="col s3 push-s2 first-compare-img">
+          </div>
+          <div class="col s3 push-s4 second-compare-img">
+          </div>
+        </div>
+        <table class="tg">
+          <tr>
+            <th class="first-col tg-031e">Name</th>
+            <th class="second-col first-car-name"></th>
+            <th class="tg-031e second-car-name"></th>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">Vehicle Type</td>
+            <td class="second-col tg-031e first-car-type"></td>
+            <td class="tg-031e second-car-type"></td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">MSRP</td>
+            <td class="second-col tg-031e first-car-msrp"></td>
+            <td class="tg-031e second-car-msrp"></td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">Engine Type</td>
+            <td class="second-col tg-031e first-car-engine">2 turbo</td>
+            <td class="tg-031e second-car-engine">2 turbo</td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">Engine Displacement</td>
+            <td class="second-col tg-031e first-car-displacement">7-speed dual-clutch automatic with manual shifting mode (6-speed manual optional)</td>
+            <td class="tg-031e second-car-displacement">7-speed dual-clutch automatic with manual shifting mode (6-speed manual optional)</td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">Transmission Type</td>
+            <td class="second-col tg-yw4l first-car-trans">Power: 252 hp @ 6000 rpm, Torque: 273 lb-ft @ 1600 rpm</td>
+            <td class="tg-yw4l second-car-trans">Power: 252 hp @ 6000 rpm, Torque: 273 lb-ft @ 1600 rpm</td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">0 to 60mph</td>
+            <td class="second-col tg-yw4l first-car-060">5 secs</td>
+            <td class="tg-yw4l second-car-060">5.5 secs</td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">Dimensions</td>
+            <td class="second-col tg-yw4l first-car-dim">200</td>
+            <td class="tg-yw4l second-car-dim">300</td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">Curb Weight</td>
+            <td class="second-col tg-yw4l first-car-lbs">190 lbs</td>
+            <td class="tg-yw4l second-car-lbs">250lbs</td>
+          </tr>
+          <tr>
+            <td class="first-col tg-031e">Fuel Economy</td>
+            <td class="second-col tg-yw4l first-car-fuelecon">24 city 34 hwy</td>
+            <td class="tg-yw4l second-car-fuelecon">24 city 34 hwy</td>
+          </tr>
+        </table>
+      </div>
       <script src="main.js"></script>
     </div>
   </body>
